[project]
name = "cvt-beltless-mechanics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "manim>=0.19.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scipy>=1.15.1",
    "sympy==1.13.3",
]
